[workspace]
resolver = "2"
members = [
    "lottie_spec",
    #"lottie_parser",
    "velato",
    "examples/with_winit", 
    "examples/run_wasm", 
    "examples/scenes"
]

[workspace.package]
edition = "2024"
version = "0.6.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/velato"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.85"

exclude = [
    ".cargo",
    ".clippy.toml",
    ".github",
    ".gitignore",
    ".taplo.toml",
    ".typos.toml",
    "examples/",
    "rustfmt.toml",
]

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v4
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.let_underscore_drop = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.single_use_lifetimes = "warn"
rust.trivial_numeric_casts = "warn"
rust.unexpected_cfgs = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"
rust.variant_size_differences = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_include_file = "warn"
clippy.large_stack_arrays = "warn"
clippy.match_same_arms = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_errors_doc = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.missing_panics_doc = "warn"
clippy.partial_pub_fields = "warn"
clippy.return_self_not_must_use = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.shadow_unrelated = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"
clippy.wildcard_imports = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[workspace.dependencies]
# NOTE: Make sure to keep this in sync with the version badge in README.md
vello = { version = "0.5.0", default-features = false }
keyframe = "1.1.1"
once_cell = "1.21.3"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
typify = "0.4.3"
reqwest = "0.11"
wasm-bindgen-test = "0.3.50"
cargo-run-wasm = "0.4.0"
anyhow = "1"
clap = "4.5.38"
image = "0.24.9"
rand = "0.8.5"
skrifa = "0.26.6"
bytemuck = "1.23.0"
instant = "0.1.13"
pollster = "0.3"
env_logger = "0.11.8"
log = "0.4.27"
notify-debouncer-mini = "0.3"
winit = "0.29.15"
getrandom = "0.2.16"
byte-unit = "4.0.19"
inquire = "0.7"
ureq = "2.12.1"
android_logger = "0.13.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
prettyplease = "0.2"
schemars = "0.8"
syn = "2.0"
web-sys = "0.3.77"
kurbo = "0.11.2"
peniko = "0.4.0"
