[workspace]
resolver = "2"
members = ["examples/with_winit", "examples/run_wasm", "examples/scenes"]

[workspace.package]
edition = "2024"
version = "0.8.1"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/velato"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.86"

[package]
name = "velato"
description = "A Lottie integration for vello."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics", "vello", "animation", "lottie"]
version.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

exclude = [
    ".cargo",
    ".clippy.toml",
    ".github",
    ".gitignore",
    ".taplo.toml",
    ".typos.toml",
    "examples/",
    "rustfmt.toml",
]

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v6.1
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[workspace.dependencies]
# NOTE: Make sure to keep this in sync with the version badge in README.md
anyrender = { version = "0.6.0" }
anyrender_vello = { version = "0.6.0" }
vello = { version = "0.6.0", default-features = false }
kurbo = { version = "0.12.0" }
peniko = { version = "0.5.0" }

[lints]
workspace = true

[dependencies]
anyrender = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }

# For the parser
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"

[dev-dependencies]
vello = { workspace = true }
anyrender_vello = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"

[features]
default = []
