[package]
name = "with_winit"
description = "An example using vello to render to a winit window"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velato = { path = "../" }
vello = { workspace = true, features = ["buffer_labels"] }
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }

wgpu = "0.15"
winit = "0.28.1"
pollster = "0.3"
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
