[package]
name = "lottie_parser"
description = "A Lottie integration for vello."
categories = ["graphics"]
keywords = ["2d", "vector-graphics", "animation", "lottie"]
version.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
keyframe = { workspace = true }
once_cell = { workspace = true }

# For the parser
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }

[build-dependencies]
typify = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
