[package]
name = "scenes"
description = "Velato scenes used in the other examples."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
velato = { path = "../.." }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
image = "0.25.5"
rand = "0.9.0"
skrifa = "0.26.4"
instant = "0.1"
bytemuck = { version = "1.21.0", features = ["derive"] }

# Used for the `download` command
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
byte-unit = "5.1.6"
inquire = "0.7"
ureq = "3.0.3"

[target.wasm32-unknown-unknown.dependencies]
# We have a transitive dependency on getrandom and it does not automatically
# support wasm32-unknown-unknown. We need to enable the js feature.
getrandom = { version = "0.3.1", features = ["wasm_js"] }
