[package]
name = "scenes"
description = "Velato scenes used in the other examples."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
velato = { path = "../.." }
anyhow = "1"
clap = { version = "4.5.38", features = ["derive"] }
image = "0.24.9"
rand = "0.8.5"
skrifa = "0.26.6"
instant = "0.1"
bytemuck = { version = "1.23.0", features = ["derive"] }

# Used for the `download` command
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
byte-unit = "4.0.19"
inquire = "0.7"
ureq = "2.12.1"

[target.wasm32-unknown-unknown.dependencies]
# We have a transitive dependency on getrandom and it does not automatically
# support wasm32-unknown-unknown. We need to enable the js feature.
getrandom = { version = "0.2.16", features = ["js"] }
