[package]
name = "scenes"
description = "Velato scenes used in the other examples."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
velato = { path = "../../velato" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image = { workspace = true }
rand = { workspace = true }
skrifa = { workspace = true }
instant = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

# Used for the `download` command
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
byte-unit = { workspace = true }
inquire = { workspace = true }
ureq = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
# We have a transitive dependency on getrandom and it does not automatically
# support wasm32-unknown-unknown. We need to enable the js feature.
getrandom = { workspace = true, features = ["js"] }
