[package]
name = "simple"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The dependencies here are independent from the workspace versions
[dependencies]
velato = { path = "../.." }
anyhow = "1.0.81"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
