[package]
name = "with_winit"
version = "0.0.0"
description = "An example using Vello with Velato to render to a winit window"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "with_winit"
crate-type = ["cdylib", "lib"]

[[bin]]
# Stop the PDB collision warning on windows
name = "with_winit_bin"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vello = { workspace = true, features = ["wgpu"] }
scenes = { path = "../scenes" }
anyhow = "1"
clap = { workspace = true, features = ["derive"] }
instant = { workspace = true, features = ["wasm-bindgen"] }
pollster = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
vello = { workspace = true, features = ["hot_reload", "wgpu"] }
notify-debouncer-mini = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { workspace = true, features = ["android-native-activity"] }
android_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCollection", "Text"] }
getrandom = { workspace = true, features = ["js"] }
