[package]
name = "with_winit"
version = "0.0.0"
description = "An example using Vello with Velato to render to a winit window"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "with_winit"
crate-type = ["cdylib", "lib"]

[[bin]]
# Stop the PDB collision warning on windows
name = "with_winit_bin"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vello = { workspace = true, features = ["wgpu"] }
kurbo = { workspace = true }
peniko = { workspace = true }
wgpu = { version = "26.0", features = ["vulkan", "metal", "dx12"] }
scenes = { path = "../scenes" }
anyhow = "1"
clap = { version = "4.5.38", features = ["derive"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
pollster = "0.3"
winit = "0.29.15"
env_logger = "0.11.8"
log = "0.4.27"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
vello = { workspace = true, features = ["hot_reload", "wgpu"] }
notify-debouncer-mini = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.15", features = ["android-native-activity"] }
android_logger = "0.13.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlCollection", "Text"] }
getrandom = { version = "0.2.16", features = ["js"] }
